Add new internal logic to overcome the problem when the WAN counter is reset due to achieving max int

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ ROUTER_USERNAME=vodafone
 ROUTER_PASSWORD=verystrongpassword
 POLLING_INTERVAL_SECONDS=60
 EXPORTER_PORT=8081
+DISABLE_WAN_MULTIPLER=false
